Fix tests
RISDEV-9428